2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.c (gdict_app_init), (gdict_app_create_data_dir),
	(gdict_init): ask the user what to do if a file with the same name
	of the dictionary data dir is found; the file usually is a remnant
	of the time when the old dictionary used bonobo, and it hasn't been
	used in a while. the user has the option to remove the file, make
	a backup copy of it, or quit dictionary and manually handle the
	name clash (closes bug #331031).

2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c (gdict_window_lookup_end_cb): use ngettext to
	use the correct localized plural form (patch by Gabor Kelemen,
	closes bug #332383).

2006-02-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (show_error_dialog): check if parent is NULL
	before using it.

2006-02-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/gdict-client-context.c (gdict_client_context_io_watch_cb),
	(gdict_client_context_parse_line): make the dictionary response code
	parsing a bit more robust; add a bunch of debug messages (closes
	bug #330782).

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-app.h
	* src/gdict-app.c (gdict_app_finalize), (gdict_window_created_cb),
	(lookup_start_cb), (definition_found_cb), (lookup_end_cb),
	(gdict_look_up_word_and_quit), (gdict_init): support looking up
	multiple words from the console using the --look-up <word> command
	line switch more than once; this also works with the --no-window
	switch, for console-only output.

	* src/gdict-window.c (gdict_window_new): fill the look up entry if 
	a word is passed to the GdictWindow constructor.

	* src/gdict-about.c: update copyright date.

2006-02-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c (gdict_window_set_word), (entry_activate_cb),
	(gdict_window_drag_data_received_cb), (gdict_window_new): if a word is
	passed to the GdictWindow constructor it'll be search automatically,