@@ -1,5 +1,10 @@
 2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* src/gdict-window.c (gdict_window_lookup_end_cb): fix ngettext()
+	usage.
+
+2006-02-24  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* src/gdict-app.c (gdict_app_init), (gdict_app_create_data_dir),
 	(gdict_init): ask the user what to do if a file with the same name
 	of the dictionary data dir is found; the file usually is a remnant
